Download: Use DownloadFileProvider for external SD card downloads.

Android's FileProvider generates file URI and will throw
FileUriExposedException on Android N+.

This CL uses the DownloadFileProvider to generate content URI, so user
can open or share downloads on N+ devices.

Bug: 797479
Change-Id: I06a05267e1cc3b8b1994d407f9cb15ff9e8bd56e
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1686692
Reviewed-by: Tommy Nyquist <nyquist@chromium.org>
Reviewed-by: Min Qin <qinmin@chromium.org>
Commit-Queue: Xing Liu <xingliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#675390}

Former-commit-id: 974aa84b5acc4a1e7923bf44d334194c11c68215